[package]
name = "oscp"
version = "0.1.0"
authors = ["Nicholas Clare <nickclare@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2"
nb = "1"
heapless = "0.7"
byteorder = "1.4"
bitflags = "1.2"
crc = "1.8"

[dev-dependencies]
linux-embedded-hal = "0.3"